first (partial) working version of the driver
- is able to connect to the server
- stream data not yet tested

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 rock_library(qualisys
-    SOURCES Dummy.cpp
-    HEADERS Dummy.hpp)
+    SOURCES Driver.cpp
+    HEADERS Driver.hpp
+    DEPS_PKGCONFIG iodrivers_base)
 
 rock_executable(qualisys_bin Main.cpp
     DEPS qualisys)
 
+#add_subdirectory( sdk )
