driver is now using tinyxml to parse parameters
still not tested, as it requires a qualisys setup to work.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,9 +1,7 @@
 rock_library(qualisys
     SOURCES Driver.cpp
     HEADERS Driver.hpp
-    DEPS_PKGCONFIG iodrivers_base)
+    DEPS_PKGCONFIG iodrivers_base tinyxml)
 
 rock_executable(qualisys_bin Main.cpp
     DEPS qualisys)
-
-#add_subdirectory( sdk )
